tests/paczka1/fuzzy1/32787989.err
Error in line 2: A9 A9 1,7
Error in line 7: zxPmi8X1D67 A357 36,7
Error in line 18: A9 A522 83,0
Error in line 23: A9 A522 291,3
Error in line 26: A9 A522 70,1
Error in line 28: A9 A522 75,7
Error in line 15: lVtwI A522 84,9
Error in line 32: xxRzWIjpJ0 A522 57,3
Error in line 36: A9 A129 22,0
Error in line 34: xxRzWIjpJ0 A129 56,4
